# Move37

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  INSTRUCTIONS.md  ISOLATION_AI_ENHANCEMENT.md  ISOLATION_OPTIMIZATION_IMPLEMENTATION.md  ISOLATION_TESTING_GUIDE.md  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  README.md  WORKER_POOL_IMPLEMENTATION.md  capacitor.config.ts  legacy_eval.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  templog.txt  tsconfig.json  vercel.json  vite.config.ts
.claude/: settings.local.json
Assets/: Glow_Mat.mat  UniversalRenderPipelineGlobalSettings.asset
Move 37_Instruction/: 01_MISSION_STATEMENT.md  02_TARGET_AUDIENCE.md  03_USER_JOURNEY.md  04_GAME_MODES_MVP.md  05_APP_ARCHITECTURE.md  06_TECHNICAL_ARCHITECTURE.md  07_MONETIZATION.md
ProjectSettings/: ProjectSettings.asset
android/: capacitor.settings.gradle
api/: index.js
attached_assets/: 01_MISSION_STATEMENT_1767935393150.md  02_TARGET_AUDIENCE_1767935393153.md  03_USER_JOURNEY_1767935393156.md  04_GAME_MODES_MVP_1767935400757.md  05_APP_ARCHITECTURE_1767935400760.md  (+2 more)
client/: index.html  (+1 more)
client/src/lib/games/isolation/wasm/: Cargo.toml  build_error.txt  build_error_2.txt  build_eval_error.txt  build_eval_fix_2.txt  build_heuristic.txt  build_heuristic_error.txt  build_heuristic_verify.txt  build_result.txt  build_result_fix.txt  build_result_heuristic_final.txt
client/src/lib/games/isolation/wasm/src/: bitboard.rs  board.rs  endgame.rs  eval.rs  lib.rs  opening.rs  partition.rs  search.rs  search_advanced.rs  transposition.rs  voronoi.rs
(+332 files in other folders)
