[package]
name = "isolation_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance Isolation AI Engine in Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
smallvec = "1.11"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
